# libtinylor

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  examples.c  tinylor.h
.github/workflows/: cmake.yml
docs/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  examples.html  examples.js  examples_8c-example.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  index.js  menudata.js  navtreedata.js  navtreeindex0.js  structlor__channel__set.html  structlor__channel__set.js  structlor__req.html  structlor__req.js  structlor__req__coll__graph.map  structlor__req__coll__graph.md5  tinylor_8c.html  tinylor_8c.js  tinylor_8c__incl.map  tinylor_8c__incl.md5  tinylor_8c_a006c7ebaa6a8830a21f9a2403c79ec10_cgraph.map  tinylor_8c_a00e1c21c0422712e73d698429b8f51bb_icgraph.map  tinylor_8c_a00e1c21c0422712e73d698429b8f51bb_icgraph.md5  tinylor_8c_a0352eb57d0ea7972c5f976a289b3e147_icgraph.map  tinylor_8c_a0352eb57d0ea7972c5f976a289b3e147_icgraph.md5  (+50 more)
docs/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  (+4 more)
src/: tinylor.c  tinylor.h  tinylor.m4  tinylor_test.c
